# uc-intg-nzbinfo

./: .gitignore  README.md  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_nzbinfo/: __init__.py  client.py  config.py  driver.py  media_player.py  setup.py
