[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-nzbinfo"
version = "0.1.3"
description = "NZB Info Manager Integration for Unfolded Circle Remote Two/3"
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia"
]
dependencies = [
    "ucapi>=0.3.1",
    "aiohttp>=3.8.0",
    "certifi>=2023.5.7"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "isort",
    "pytest",
    "pytest-asyncio"
]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-nzbinfo"
"Documentation" = "https://github.com/mase1981/uc-intg-nzbinfo/blob/main/README.md"
"Source" = "https://github.com/mase1981/uc-intg-nzbinfo"
"Bug Reports" = "https://github.com/mase1981/uc-intg-nzbinfo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["uc_intg_nzbinfo*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes"
]